--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.0.0-beta.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "autoprefixer": "^10.4.19",
@@ -37,6 +38,7 @@
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.27.2",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
   }
