--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.0.0-rc.2",
     "tailwindcss-primeui": "^0.3.2",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.0.0-beta.5",
