--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.0-rc.2",
+    "@vee-validate/zod": "^4.13.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.0-rc.2",
     "tailwindcss-primeui": "^0.3.2",
+    "vee-validate": "^4.13.1",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.0.0-beta.5",
