--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@primevue/themes": "^4.0.0-rc.2",
     "@vee-validate/zod": "^4.13.1",
+    "axios": "^1.6.5",
+    "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.0-rc.2",
     "tailwindcss-primeui": "^0.3.2",
